--- a/css/style.css
+++ b/css/style.css
@@ -238,5 +238,114 @@ body {
 .slider__item {
   padding-left: 50px;
 }
-.slider__img {
+
+.price {
+  padding-bottom: 100px;
+}
+
+.price__inner {
+  position: relative;
+}
+.form {
+  max-width: 420px;
+}
+.form__title {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  text-transform: uppercase;
+  margin-bottom: 40px;
+}
+.form__text {
+  max-width: 300px;
+  margin-bottom: 30px;
+}
+
+.form__input-text {
+  margin-bottom: 10px;
+}
+.form__input-name,
+.form__input-phone {
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid #131313;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+  outline: none;
+}
+.form__input-name::placeholder,
+.form__input-phone::placeholder,
+.form__input-text {
+  color: #6f6f6f;
+
+  opacity: 0.5;
+}
+
+.form__label-box {
+  display: flex;
+  margin-bottom: 50px;
+}
+.form__label:not(:last-child) {
+  margin-right: 23px;
+}
+.form__input-radio {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+}
+.form__input-radio:checked + .form__bike {
+  display: block;
+}
+.form__bike {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.form__bike-img {
+}
+.form__bike-price {
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 220px;
+  height: 100px;
+  text-align: center;
+}
+.form__btn {
+  text-align: center;
+  width: 100%;
+  background-color: #131313;
+  color: #fff;
+
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 1.1em;
+  text-transform: uppercase;
+  padding-top: 28px;
+  padding-bottom: 28px;
+}
+.form__radio-style {
+  border-radius: 30px;
+  width: 80px;
+  height: 12px;
+}
+.form__radio-style--grey {
+  background: #6f6f6f;
+}
+.form__radio-style--white {
+  background: #ffffff;
+  /* серый */
+
+  border: 1px solid #6f6f6f;
+}
+.form__radio-style--red {
+  background: #ff4040;
 }
